Issue #3043556 by thalles: Align column numbers on the right

--- a/css/imce.css
+++ b/css/imce.css
@@ -317,7 +317,6 @@
 .imce-item-height {
   width: 10%;
   max-width: 4.4em;
-  text-align: left;
 }
 /* Item date */
 .imce-item-date {
